--- a/Car Simulator/Packages/manifest.json
+++ b/Car Simulator/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unify.unified-universal-blur": "https://github.com/lukakldiashvili/Unified-Universal-Blur.git",
     "com.unity.collab-proxy": "2.2.0",
+    "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
