migration to websocke

--- a/Car Simulator/Packages/manifest.json
+++ b/Car Simulator/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.endel.nativewebsocket": "https://github.com/endel/NativeWebSocket.git#upm",
     "com.unify.unified-universal-blur": "https://github.com/lukakldiashvili/Unified-Universal-Blur.git",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.editorcoroutines": "1.0.0",
